--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
 //            minifyEnabled true
 //            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "URL", ""
+        }
+        debug {
+            resValue "string", "URL", "www.google.com"
         }
     }
     buildFeatures {
