--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 32
     defaultConfig {
         applicationId "com.mobilekosmos.android.shortly"
-        minSdkVersion 23
+        minSdkVersion 29
         // Ignore warning: API 33 still not tested with latest gradle plugin 7.2.1
         targetSdkVersion 32
         versionCode 1
@@ -17,10 +17,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+//            minifyEnabled false
             // TODO: before release, must make sure all work with these flags.
-//            minifyEnabled true
-//            shrinkResources true
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue "string", "URL", ""
         }
@@ -56,6 +56,8 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0-alpha02"
     kapt "androidx.room:room-compiler:2.5.0-alpha02"
     annotationProcessor "androidx.room:room-compiler:2.5.0-alpha02"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
