--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
             resValue "string", "URL", ""
         }
         debug {
-            resValue "string", "URL", "www.google.com"
+            resValue "string", "URL", "https://www.google.com/looooong&url"
         }
     }
     buildFeatures {
